<resources>
    <string name="app_name">HMU App</string>
    <string name="title_news">Ειδήσεις</string>
    <string name="title_announcements">Ανακοινώσεις</string>
    <string name="title_events">Εκδηλώσεις</string>
    <string name="title_teachers">Διδάσκοντες</string>
    <string name="title_student_links">Σύνδεσμοι Φοιτητών</string>
    <string name="title_map">Χάρτης</string>
    <string name="coming_soon">Έρχεται σύντομα</string>
    <string name="fetch_failed">Αποτυχία φόρτωσης ειδήσεων</string>
    <string name="no_internet">Δεν υπάρχει σύνδεση στο διαδίκτυο</string>
    <string name="search_teachers">Αναζήτηση...</string>
    <string name="teachers_load_failed">Αποτυχία φόρτωσης καθηγητών</string>
    <string name="no_teachers_found">Δεν βρέθηκαν διδάσκοντες</string>
    <string name="open_website">Άνοιγμα ιστοσελίδας</string>
</resources>
