<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/ic_placeholder"
        android:title="@string/title_news" />
    <item
        android:id="@+id/announcementsFragment"
        android:icon="@drawable/ic_placeholder"
        android:title="@string/title_announcements" />
    <item
        android:id="@+id/eventsFragment"
        android:icon="@drawable/ic_placeholder"
        android:title="@string/title_events" />
    <item
        android:id="@+id/teachersFragment"
        android:icon="@drawable/ic_placeholder"
        android:title="@string/title_teachers" />
    <item
        android:id="@+id/studentLinksFragment"
        android:icon="@drawable/ic_placeholder"
        android:title="@string/title_student_links" />
    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_placeholder"
        android:title="@string/title_map" />
</menu>
